gap fix

--- a/css/style.css
+++ b/css/style.css
@@ -218,13 +218,12 @@ img {
 }
 .section-list {
   display: flex;
+  gap: 30px;
 }
 .section-cards {
-  margin-right: 30px;
+  width: calc((100% - 30px) / 3);
 }
-.section-cards:last-child {
-  margin-right: 0;
-}
+
 .section-title {
   margin-bottom: 50px;
   color: var(--title-text-color);
@@ -240,17 +239,16 @@ img {
 }
 .team {
   display: flex;
+  gap: 30px;
 }
 .our-team-cards {
-  margin-right: 30px;
   background-color: var(--primay-bg-color);
   text-align: center;
   box-shadow: var(--box-shadow-card);
   border-radius: 0px 0px 4px 4px;
+  width: calc((100% - 30px) / 4);
 }
-.our-team-cards:last-child {
-  margin-right: 0;
-}
+
 .our-team-title {
   margin-bottom: 50px;
   color: var(--title-text-color);
@@ -359,8 +357,12 @@ img {
 .project {
   display: flex;
   flex-wrap: wrap;
+  gap: 30px;
 }
 .project-cards {
+  min-width: calc((100% - 90px) / 3);
+}
+/*.project-cards {
   margin-right: 30px;
   margin-bottom: 30px;
   width: 370px;
@@ -370,7 +372,7 @@ img {
 }
 .project-cards:nth-last-child(-n + 3) {
   margin-bottom: 0;
-}
+}*/
 .project-title {
   margin-bottom: 4px;
 
